# SearchEngine

./: .gitignore  CMakeLists.txt  Crawler.cpp  Makefile  PageLoader  Result  Server.cpp
DBConnector/: CMakeLists.txt  DBConnector.cpp  DBConnector.hpp
DocumentStore/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentStore.cpp  DocumentStore.hpp
LinkStore/: CMakeLists.txt  Link.cpp  Link.hpp  LinkStatus.hpp  LinkStore.cpp  LinkStore.hpp
Parser/: CMakeLists.txt  HTMLParser.cpp  HTMLParser.hpp
RequestModul/: CMakeLists.txt  Page.cpp  Page.hpp  PageLoader.cpp  PageLoader.hpp
SpellChecker/: SpellChecker.cpp  SpellChecker.hpp
WebsiteStore/: CMakeLists.txt  Website.cpp  Website.hpp  WebsiteStore.cpp  WebsiteStore.hpp
